Implement tuning script and updated config

--- a/rocm_wmma_gemm/CMakeLists.txt
+++ b/rocm_wmma_gemm/CMakeLists.txt
@@ -16,7 +16,6 @@ add_custom_target(generate_gemm_config
     DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/include/kernel/config_generated.hpp
 )
 
-# Existing content
 set_source_files_properties(src/gemm.cpp PROPERTIES COMPILE_OPTIONS -mcumode)
 
 add_library(rocm_wmma_gemm STATIC src/gemm.cpp)
@@ -36,4 +35,33 @@ target_link_libraries(rocm_wmma_gemm PUBLIC ${HIP_LIBRARIES})
 target_compile_options(rocm_wmma_gemm PRIVATE
     -O3                 # High optimization
     -ffast-math         # Fast math operations (may break strict IEEE compliance)
+)
+
+# For tuner
+set_source_files_properties(config/tuner.cpp PROPERTIES COMPILE_OPTIONS -mcumode)
+
+# Add tuner executable
+add_executable(tuner config/tuner.cpp)
+
+# Include HIP include directories and generated headers
+target_include_directories(tuner PUBLIC
+    ${HIP_INCLUDE_DIRS}
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+    ${CMAKE_CURRENT_BINARY_DIR}/include  # Add this for generated headers
+)
+
+# Link HIP libraries
+target_link_libraries(tuner PUBLIC ${HIP_LIBRARIES})
+
+# Add optimization flags
+target_compile_options(tuner PRIVATE
+    -O3                 # High optimization
+    -ffast-math         # Fast math operations (may break strict IEEE compliance)
+)
+
+# Copy tune.py to build directory
+configure_file(
+    ${CMAKE_CURRENT_SOURCE_DIR}/config/tune.py
+    ${CMAKE_BINARY_DIR}/tune.py
+    COPYONLY
 )
