--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -2,7 +2,7 @@
 add_executable(gemm_bench gemm/bench.cpp)
 
 # Include HIP include directories
-target_include_directories(gemm_bench PRIVATE ${PROJECT_SOURCE_DIR})
+target_include_directories(gemm_bench PRIVATE ${PROJECT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 # Link HIP libraries
 target_link_libraries(gemm_bench PRIVATE rocm_wmma_gemm benchmark::benchmark)
@@ -11,7 +11,7 @@ target_link_libraries(gemm_bench PRIVATE rocm_wmma_gemm benchmark::benchmark)
 add_executable(rocblas_bench rocblas/bench.cpp)
 
 # Include HIP include directories
-target_include_directories(rocblas_bench PRIVATE ${PROJECT_SOURCE_DIR})
+target_include_directories(rocblas_bench PRIVATE ${PROJECT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 # Link HIP libraries
 target_link_libraries(rocblas_bench PRIVATE rocblas_wrapper benchmark::benchmark)
