--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,11 +1,20 @@
 # Create an executable target
-add_executable(gemm_test gemm/test.cpp)
+add_executable(test_float_accum gemm/test_float_accum.cpp)
 
 # Include HIP include directories
-target_include_directories(gemm_test PRIVATE ${PROJECT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(test_float_accum PRIVATE ${PROJECT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 # Link HIP libraries
-target_link_libraries(gemm_test PRIVATE rocm_wmma_gemm GTest::GTest GTest::Main)
+target_link_libraries(test_float_accum PRIVATE rocm_wmma_gemm GTest::GTest GTest::Main)
+
+# Create an executable target
+add_executable(test_same_prec gemm/test_same_prec.cpp)
+
+# Include HIP include directories
+target_include_directories(test_same_prec PRIVATE ${PROJECT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
+
+# Link HIP libraries
+target_link_libraries(test_same_prec PRIVATE rocm_wmma_gemm GTest::GTest GTest::Main)
 
 # Create an executable target
 add_executable(rocblas_test rocblas/test.cpp)
